--- a/style.css
+++ b/style.css
@@ -23,12 +23,12 @@
 }
 .home_style {
   width: 100%;
-  height: 880px;
+  height: 980px;
   justify-content: center;
   display: flex;
 }
 .home_header {
-  margin-top: 230px;
+  margin-top: 280px;
 }
 .home_text {
   color: white;
@@ -40,4 +40,7 @@
   text-decoration: none !important;
   color: white;
   margin-left: 10px;
+}
+.about_style {
+  height: 500px;
 }
