--- a/style.css
+++ b/style.css
@@ -1,6 +1,9 @@
 .text_primary {
   color: #66fcf1;
 }
+.text_secondary {
+  color: #c5c6c7;
+}
 .hover {
   cursor: pointer;
   color: white;
@@ -147,7 +150,7 @@
     display: inline-block;
   }
   .profile_text {
-    text-align: left;
+    text-align: center;
     line-height: 30px;
     font-size: 20px;
     margin-top: 10px;
