--- a/style.css
+++ b/style.css
@@ -1,12 +1,21 @@
+.background_primary {
+  background-color: #1f2833;
+}
 .text_primary {
   color: #66fcf1;
 }
 .text_secondary {
   color: #c5c6c7;
 }
+.text_primary2 {
+  color: #8ee4af;
+}
+.text_secondary2 {
+  color: white;
+}
+
 .hover {
   cursor: pointer;
-  color: white;
 }
 .navbar-nav > li {
   margin-left: 30px;
@@ -14,6 +23,10 @@
 }
 .navbar-dark .navbar-nav .nav-link {
   color: white;
+}
+
+ul.nav a:hover {
+  color: #66fcf1 !important;
 }
 .home_background {
   height: 100%;
@@ -46,18 +59,14 @@
   margin-left: 10px;
 }
 .about_style {
-  height: 500px;
+  flex: 1;
 }
 .about_background {
-  background-color: #1f2833;
   height: 100%;
   width: 100%;
   text-align: center;
-  padding-top: 100px;
-}
-.about_header {
-  padding-top: 100px;
-  margin-bottom: 50px;
+  padding-top: 10px;
+  padding-bottom: 100px;
 }
 .about_text {
   color: black;
@@ -85,7 +94,7 @@
 }
 
 .content-intro img {
-  height: 130px;
+  flex: 1;
   width: 130px;
   float: left;
 }
@@ -94,7 +103,6 @@
 }
 .profile_skill {
   text-align: center;
-  background-color: #1f2833;
 }
 
 .profile_skill_align {
@@ -122,15 +130,51 @@
 }
 
 .resume_style {
-  height: 1200px;
+  flex: 1;
   background-color: white;
   text-align: center;
   padding-top: 50px;
 }
 
+.project_style {
+  flex: 1;
+  text-align: center;
+  padding-top: 50px;
+  padding-bottom: 50px;
+}
+
+.project_card {
+  margin: 10px;
+}
+
+.contact_background {
+  text-align: center;
+  padding-top: 50px;
+  height: 500px;
+}
+
+.horizontal {
+  display: inline-block;
+  vertical-align: top;
+  width: 300px;
+}
+
+.resume_left {
+  display: inline-block;
+  vertical-align: top;
+  width: 30%;
+  text-align: right;
+}
+
+.resume_right {
+  display: inline-block;
+  vertical-align: top;
+  width: 40%;
+  text-align: left;
+  margin-left: 30px;
+}
+
 @media only screen and (max-width: 600px) {
-  .row {
-  }
   .home_style {
     width: 100%;
     height: 820px;
@@ -164,9 +208,6 @@
   .profile_skill_section {
     text-align: center;
   }
-  .about_style {
-    height: 700px;
-  }
   .profile_style {
     width: 90%;
     margin: 0px;
@@ -174,5 +215,26 @@
   .skill_style {
     width: 90%;
     margin: 0px;
+  }
+  .horizontal {
+    display: inline;
+    vertical-align: top;
+    width: 20%;
+  }
+
+  .resume_left {
+    display: inline;
+    margin: 0px;
+    text-align: center;
+  }
+
+  .resume_right {
+    display: inline;
+    margin: 0px;
+    text-align: center;
+  }
+
+  .description_style {
+    text-align: center;
   }
 }
