--- a/style.css
+++ b/style.css
@@ -2,6 +2,10 @@ body {
   position: relative;
 }
 
+a:-webkit-any-link {
+  text-decoration: none !important;
+}
+
 .background_primary {
   background-color: #1f2833;
 }
