--- a/style.css
+++ b/style.css
@@ -7,6 +7,13 @@ a:-webkit-any-link {
   text-decoration: none !important;
 }
 
+.navbar-dark .navbar-nav .active > .nav-link,
+.navbar-dark .navbar-nav .nav-link.active,
+.navbar-dark .navbar-nav .nav-link.show,
+.navbar-dark .navbar-nav .show > .nav-link {
+  color: #66fcf1;
+}
+
 .background_primary {
   background-color: #1f2833;
 }
@@ -33,13 +40,7 @@ a:-webkit-any-link {
   margin-left: 30px;
   margin-right: 30px;
 }
-.navbar-dark .navbar-nav .nav-link {
-  color: white;
-}
 
-ul.nav a:hover {
-  color: #66fcf1 !important;
-}
 .home_background {
   height: 100%;
   width: 100%;
@@ -77,7 +78,7 @@ ul.nav a:hover {
   height: 100%;
   width: 100%;
   text-align: center;
-  padding-top: 10px;
+  padding-top: 50px;
   padding-bottom: 100px;
 }
 .about_text {
@@ -145,13 +146,13 @@ ul.nav a:hover {
   flex: 1;
   background-color: white;
   text-align: center;
-  padding-top: 50px;
+  padding-top: 100px;
 }
 
 .project_style {
   flex: 1;
   text-align: center;
-  padding-top: 50px;
+  padding-top: 100px;
   padding-bottom: 50px;
 }
 
@@ -197,8 +198,19 @@ ul.nav a:hover {
   margin-top: 100px;
   cursor: pointer;
 }
+.list li {
+  display: inline;
+}
+.list {
+  justify-content: center;
+  flex-direction: row !important;
+}
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 700px) {
+  .list {
+    margin: 0px !important;
+  }
+
   .home_style {
     width: 100%;
     height: 750px;
