--- a/style.css
+++ b/style.css
@@ -78,7 +78,7 @@ a:-webkit-any-link {
   height: 100%;
   width: 100%;
   text-align: center;
-  padding-top: 50px;
+  padding-top: 100px;
   padding-bottom: 100px;
 }
 .about_text {
@@ -146,13 +146,13 @@ a:-webkit-any-link {
   flex: 1;
   background-color: white;
   text-align: center;
-  padding-top: 100px;
+  padding-top: 150px;
 }
 
 .project_style {
   flex: 1;
   text-align: center;
-  padding-top: 100px;
+  padding-top: 120px;
   padding-bottom: 50px;
 }
 
@@ -281,5 +281,8 @@ a:-webkit-any-link {
 
   .down_icon {
     margin-top: 50px;
+  }
+  .contact_background {
+    padding-top: 150px;
   }
 }
