--- a/style.css
+++ b/style.css
@@ -11,7 +11,13 @@ a:-webkit-any-link {
 .navbar-dark .navbar-nav .nav-link.active,
 .navbar-dark .navbar-nav .nav-link.show,
 .navbar-dark .navbar-nav .show > .nav-link {
-  color: #66fcf1;
+  color: #66fcf1 !important;
+}
+
+/* rgba(255,255,255,.5) */
+.navbar-dark .navbar-nav .nav-link:focus,
+.navbar-dark .navbar-nav .nav-link:hover {
+  color: rgba(255, 255, 255, 0.5);
 }
 
 .background_primary {
