--- a/style.css
+++ b/style.css
@@ -47,36 +47,6 @@ a:-webkit-any-link {
   margin-right: 30px;
 }
 
-.home_background {
-  height: 100%;
-  width: 100%;
-  background: url("./public/assets/Images/home_background.jpg") no-repeat center;
-  position: relative;
-  object-fit: cover;
-
-  background-size: cover !important;
-  -webkit-background-size: cover !important;
-  text-align: center;
-  overflow: hidden;
-}
-.home_style {
-  width: 100%;
-  height: 980px;
-}
-.home_header {
-  margin-top: 280px;
-}
-.home_text {
-  color: white;
-}
-.home_content {
-  margin-top: 350px;
-}
-.home_link_icon {
-  text-decoration: none !important;
-  color: white;
-  margin-left: 10px;
-}
 .about_style {
   flex: 1;
 }
@@ -211,21 +181,13 @@ a:-webkit-any-link {
   justify-content: center;
   flex-direction: row !important;
 }
+.padding-top {
+  padding-top: 20px;
+}
 
 @media only screen and (max-width: 700px) {
   .list {
     margin: 0px !important;
-  }
-
-  .home_style {
-    width: 100%;
-    height: 750px;
-  }
-  .home_header {
-    margin-top: 160px;
-  }
-  .home_content {
-    margin-top: 300px;
   }
   .profile_skill_height {
     height: 1200px;
