--- a/public/assets/style/about.css
+++ b/public/assets/style/about.css
@@ -23,6 +23,13 @@
   width: 130px;
   float: left;
 }
+.section-intro {
+  max-width: 700px;
+  text-align: center;
+  position: relative;
+  margin-left: auto;
+  margin-right: auto;
+}
 @media only screen and (max-width: 700px) {
   .content-intro img {
     height: 110px;
