--- a/public/assets/style/profile.css
+++ b/public/assets/style/profile.css
@@ -1,13 +1,3 @@
-.profile_text {
-  text-align: left;
-  line-height: 30px;
-  font-size: 20px;
-  margin-left: 160px;
-}
-
-.profile_skill_height {
-  height: 600px;
-}
 .profile_skill {
   text-align: center;
 }
@@ -19,4 +9,11 @@
 .profile_style {
   width: 30%;
   margin-right: 20px;
+}
+
+@media only screen and (max-width: 700px) {
+  .profile_style {
+    width: 90%;
+    margin: 0px;
+  }
 }
