--- a/public/assets/style/contact.css
+++ b/public/assets/style/contact.css
@@ -3,7 +3,7 @@
 }
 .up_icon {
   color: white;
-  margin-top: 100px;
+  margin-top: 50px;
   cursor: pointer;
 }
 .horizontal {
@@ -11,9 +11,14 @@
   vertical-align: top;
   width: 300px;
 }
+.contact_background {
+  text-align: center;
+  flex: 1;
+  padding-bottom: 50px;
+}
 @media only screen and (max-width: 700px) {
   .contact_background {
-    padding-top: 150px;
+    padding-top: 100px;
   }
   .horizontal {
     display: inline;
