--- a/public/assets/style/contact.css
+++ b/public/assets/style/contact.css
@@ -15,6 +15,9 @@
   text-align: center;
   flex: 1;
   padding-bottom: 50px;
+  padding-top: 100px;
+}
+.contact_style {
 }
 @media only screen and (max-width: 700px) {
   .contact_background {
